fixed button alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,12 +78,8 @@ body {
   }
 
   /* .saveBtn {
-    border-left: 1px solid black;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
-    text-align: center;
-    height: 100%;
-    width: 100%;
   } */
 
 
